jvmOpts on args